--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1>Hot Beans Web</h1>
        
         <ul>
-            <li><a href="http://localhost:8383/HotBeans%20Web/Home.html">Home</a></li>
-            <li><a href="http://localhost:8383/HotBeans%20Web/Application.html">Apply</a></li>
-            <li><a href="http://localhost:8383/HotBeans%20Web/Requirements.html">Requirements</a></li>
-               <li><a href="http://localhost:8383/HotBeans%20Web/OurTeam.html">Our Team</a></li>
-                  <li><a href="http://localhost:8383/HotBeans%20Web/Courses.html">Courses</a></li>
+            <li><a href=index.html">Home</a></li>
+            <li><a href=Application.html">Apply</a></li>
+            <li><a href="Requirements.html">Requirements</a></li>
+               <li><a href="OurTeam.html">Our Team</a></li>
+                  <li><a href="Courses.html">Courses</a></li>
         </ul>
         
     </header>
