--- a/Application.html
+++ b/Application.html
@@ -16,11 +16,11 @@
         <img src="Assets/banner1.png"/>
         <h1>Hot Beans Web</h1>
         <ul>
-           <li><a href="http://localhost:8383/HotBeans%20Web/Home.html">Home</a></li>
-            <li><a href="http://localhost:8383/HotBeans%20Web/Application.html">Apply</a></li>
-            <li><a href="http://localhost:8383/HotBeans%20Web/Requirements.html">Requirements</a></li>
-               <li><a href="http://localhost:8383/HotBeans%20Web/OurTeam.html">Our Team</a></li>
-                  <li><a href="http://localhost:8383/HotBeans%20Web/Courses.html">Courses</a></li>
+           <li><a href="https://sajid771.github.io/Hot-Beans/">Home</a></li>
+            <li><a href="Application.html">Apply</a></li>
+            <li><a href="Requirements.html">Requirements</a></li>
+               <li><a href="OurTeam.html">Our Team</a></li>
+                  <li><a href="Courses.html">Courses</a></li>
         </ul>
         </header>
         <div class="Content">
