--- a/Application.html
+++ b/Application.html
@@ -17,7 +17,7 @@
         <h1>Hot Beans Web</h1>
         <ul>
            <li><a href="https://sajid771.github.io/Hot-Beans/">Home</a></li>
-            <li><a href=Application.html>Apply</a></li>
+            <li><a href="https://sajid771.github.io/Hot-Beans/Application.html">Apply</a></li>
             <li><a href=Requirements.html>Requirements</a></li>
                <li><a href=OurTeam.html>Our Team</a></li>
                   <li><a href=Courses.html>Courses</a></li>
