--- a/Requirements.html
+++ b/Requirements.html
@@ -56,6 +56,8 @@ It is useful to have taken Computer Science or another, similar subjects at GCSE
                 <a href="https://uk.linkedin.com/">
             <img src="Assets/linkedin.webp" class="socials">
                 </a>
+         <h3 class="Author w3-text-white" style="color: white;">Author: Sajid Parvin</h3>
+            <h3 class="Author w3-text-white" style="color: white;">©Copyright 2024</h3>
         </footer>  
            
     </body> 
