--- a/OurTeam.html
+++ b/OurTeam.html
@@ -56,7 +56,8 @@
                 <a href="https://uk.linkedin.com/">
             <img src="Assets/linkedin.webp" class="socials">
                 </a>
-       
+        <h3 class="Author w3-text-white" style="color: white;">Author: Sajid Parvin </h3>
+            <h3 class="Author w3-text-white" style="color: white;">©Copyright 2024</h3>
            </footer>
         </body>
             </div>
