--- a/Application.html
+++ b/Application.html
@@ -54,7 +54,7 @@
     <Label class="Label">Phone Number</label>
     <input class="w3-input" type="text">
 </form>
-        <button>Submit</button>
+       <button><a href="http://localhost:8383/HotBeans%20Web/submitted.html">Submit</a></button>
         </div>
         <footer class="footer">
             <h2 style="color: white;">Follow us in our social medias</h2>  
